--- a/poltawa/cover.html
+++ b/poltawa/cover.html
@@ -2,6 +2,6 @@
 
 <script>
   function goToGallery(){
-    window.open("PoltawaGallery.html","_blank").focus();
+    window.open("gallery.html","_blank").focus();
   }
 </script>
