--- a/poltawa/gallery.html
+++ b/poltawa/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - React &amp; CSS Grid Image Gallery</title>
+  <title>In Suche nach Glueck</title>
 
   <style>
     @charset "UTF-8";
